force-app/main/default/objects/Activity/fields/Is_Connect__c.field-meta.xml
<CustomField>
    <fullName>Is_Connect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Connect</label>
    <type>Checkbox</type>
</CustomField>