force-app/main/default/objects/Activity/fields/LinkedIn_Message_Sent__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Message_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LinkedIn Message Sent</label>
    <type>Checkbox</type>
</CustomField>