force-app/main/default/objects/Activity/fields/Outreach_Type__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outreach Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Company Overview</fullName>
            </value>
            <value>
                <fullName>Discovery Call</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>AE Outreach</fullName>
            </value>
            <value>
                <fullName>Reference Call</fullName>
            </value>
            <value>
                <fullName>Calendar Call</fullName>
            </value>
            <value>
                <fullName>Client Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>