force-app/main/default/objects/Activity/fields/REVGRD__InternetMessageId__c.field-meta.xml
<CustomField>
    <fullName>REVGRD__InternetMessageId__c</fullName>
    <externalId>true</externalId>
    <label>Internet Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>