force-app/main/default/objects/Activity/fields/REVGRD__IsInternal__c.field-meta.xml
<CustomField>
    <fullName>REVGRD__IsInternal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Internal</label>
    <type>Checkbox</type>
</CustomField>