force-app/main/default/objects/Activity/fields/REVGRD__IsOutbound__c.field-meta.xml
<CustomField>
    <fullName>REVGRD__IsOutbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Outbound</label>
    <type>Checkbox</type>
</CustomField>