force-app/main/default/objects/Activity/fields/REVGRD__SavedManuallyAddIn__c.field-meta.xml
<CustomField>
    <fullName>REVGRD__SavedManuallyAddIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saved Manually AddIn</label>
    <type>Checkbox</type>
</CustomField>