force-app/main/default/objects/Activity/fields/REVGRD__SendDate__c.field-meta.xml
<CustomField>
    <fullName>REVGRD__SendDate__c</fullName>
    <label>Send Date</label>
    <type>DateTime</type>
</CustomField>