force-app/main/default/objects/Activity/fields/REVGRD__Sent__c.field-meta.xml
<CustomField>
    <fullName>REVGRD__Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for sent emails</description>
    <label>Sent</label>
    <type>Checkbox</type>
</CustomField>