force-app/main/default/objects/Activity/fields/REVGRD__ThreadId__c.field-meta.xml
<CustomField>
    <fullName>REVGRD__ThreadId__c</fullName>
    <externalId>true</externalId>
    <label>Thread Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>